  handling mixed ``str``/``unicode`` content.

* In :class:`formencode.validators.Email` allow single-character
  domain names (like x.com).

* Make :class:`formencode.validators.FieldsMatch` give a normal
  ``Invalid`` exception if you pass it a non-dictionary.  Also treat
  all missing keys as the empty string (previously the first key was
  required and would raise KeyError).

1.1
---

* Fixed the ``is_empty()`` method in
  :class:`formencode.validators.FieldStorageUploadConverter`; 
  previously it returned the opposite of the intended result.

* Added a parameter to ``htmlfill.render()``: ``prefix_error``.  If
  this parameter is true (the default) then errors automatically go
  before the input field; if false then they go after the input field.

* Remove deprecated modules: ``fields``, ``formgen``, ``htmlform``,
  ``sqlformgen``, and ``sqlschema``.

* Added ``formencode.htmlrename``, which renames HTML inputs.

* In ``formencode.htmlfill``, non-string values are compared usefully
  (e.g., a select box with integer values).

* The validators ``Int`` and ``Number`` both take min/max arguments
  (from Shannon Behrens).

* Validators based on ``formencode.validators.FormValidator`` will not
  treat ``{}`` as an empty (unvalidated) value.

* Some adjustments to the URL validator.

* :class:`formencode.compound.All` does not handle empty values,
  instead relying on sub-validators to check for emptiness.

* Fixed the ``if_missing`` attribute in
  :class:`formencode.foreach.ForEach`; previously it would be the same
  list instance, so if you modified it then it would effect future
  ``if_missing`` values (reported by Felix Schwarz).

* Added formatter to :mod:`formencode.htmlfill`, so you can use
  ``<form:error name="field_name" formatter="ignore" />`` -- this will
  cause the error to be swallowed, not shown to the user.

* Added :class:`formencode.validators.XRI` for validation i-names,
  i-numbers, URLs, etc (as used in OpenID).
